[gd_scene load_steps=5 format=3 uid="uid://dfbdt0hp76jir"]

[ext_resource type="Texture2D" uid="uid://cvoxqy1bqcrb1" path="res://assets/sprites/plataformas.png" id="1_m3n82"]
[ext_resource type="Script" path="res://scripts/falling_platform.gd" id="1_xtgeo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xvytx"]
size = Vector2(46, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4nccu"]
size = Vector2(46, 11)

[node name="Falling Platform" type="CharacterBody2D"]
script = ExtResource("1_xtgeo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_m3n82")
region_enabled = true
region_rect = Rect2(16, 32, 48, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_xvytx")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_4nccu")

[node name="Timer Disappear" type="Timer" parent="."]
one_shot = true

[node name="Timer Appear" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer Disappear" to="." method="_on_timer_disappear_timeout"]
[connection signal="timeout" from="Timer Appear" to="." method="_on_timer_appear_timeout"]
